--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -47,4 +47,52 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  filter: opacity(-100px);
+  overflow: hidden;
+}
+
+.resume{
+  border: solid 3px rgb(0, 110, 255);
+  box-shadow: 0 0px 80px rgba(255, 254, 254, 0.671);
+  cursor: pointer;
+  border-radius: 20%;
+  transition: ease-in 0.4s;
+}
+.resume:hover{
+  box-shadow: 0 0px 80px rgba(81, 127, 225, 0.671);
+  border: solid 2px rgb(0, 110, 255);
+  scale: 1.05;
+}
+
+.back{
+  color: white;
+  background-color: transparent;
+  border: none;
+}
+.back:hover{
+  text-shadow: 0px 0px 40px white;
+}
+
+.row-full{
+  width:100%
+}
+
+.media {
+  background-color: transparent;
+  border: 2px solid aqua;
+  color: aqua;
+  padding: 10px 20px;
+  margin: 8px;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.media:hover {
+  background-color: cyan;
+  color: black;
+  box-shadow: 0 0 20px cyan, 0 0 40px cyan, 0 0 60px cyan;
+  transition: all 0.3s ease-in-out;
 }
