--- a/portfolio/src/css/home.css
+++ b/portfolio/src/css/home.css
@@ -1,9 +1,38 @@
-.name{
-    background: linear-gradient(90deg, #b8b5b5, #7c7e7c);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 150px;
+/* From Uiverse.io by iZOXVL */ 
+.boton-elegante {
+    padding: 10px 50px;
+    border: 1px solid white;
+    background:linear-gradient(135deg, violet, #8e2de2, #4a00e0) ;
+    color: #ffffff;
+    font-size: 1.2rem;
+    cursor: pointer;
+    border-radius: 30px;
+    transition: all 0.4s ease;
+    outline: none;
+    position: relative;
+    overflow: hidden;
     font-weight: bold;
-    text-align: center;
-    text-transform: uppercase;
-}
+  }
+  
+  .boton-elegante::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    transition: transform 0.5s ease;
+  }
+  
+  .boton-elegante:hover::after {
+    transform: scale(4);
+  }
+  
+  .boton-elegante:hover {
+    border-color: #666666;
+    background: linear-gradient(-125deg, violet, #8e2de2, #4a00e0);
+    color: white;
+    text-shadow: 0px 50px 60px white;
+  }
+  
