--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -96,3 +96,43 @@
   box-shadow: 0 0 20px cyan, 0 0 40px cyan, 0 0 60px cyan;
   transition: all 0.3s ease-in-out;
 }
+
+.glassy{
+  background-color: transparent;
+  border: 1px solid white;
+  color: aqua;
+  padding: 10px 20px;
+  margin: 8px;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.glassy:hover {
+  background:linear-gradient(65deg,rgb(71, 2, 112),rgb(214, 40, 63));
+  color: white;
+  box-shadow: 0 0 20px rgb(221, 58, 61);
+  transition: all 0.3s ease-in-out;
+  scale: 1.04;
+  border: 1px solid cyan;
+}
+
+.Techicon{
+  border:solid 1px grey;
+  border-radius: 20%;
+  width:80px;
+  height:80px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 0px 20px black;
+  transition: ease-in 0.4s;
+}
+
+.Techicon:hover{
+  border:solid 1px cyan;
+  box-shadow: 0px 0px 40px black;
+  scale: 1.04;
+}
